# self-deploying-hello-universe

./: BUILD.bazel  Dockerfile  README.md  WORKSPACE  handler.go  main.go  version.go
deployments/: hello-universe.yaml
kubernetes/: deployment.go  kubernetes.go
replicasets/: hello-universe.yaml
services/: hello-universe.yaml
