load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_prefix")

go_prefix("github.com/kelseyhightower/hello-universe")

go_library(
    name = "go_default_library",
    srcs = [
        "handler.go",
        "main.go",
        "version.go",
    ],
    visibility = ["//visibility:private"],
    deps = ["@com_github_kelseyhightower_kargo//:go_default_library"],
)

go_binary(
    name = "hello-universe",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
